2013-06-21  Peter Bloomfield

	* src/sendmsg-window.c (remove_attachment), (change_attach_mode),
	(show_attachment_widget), (add_attachment),
	(add_urlref_attachment), (create_info_pane), (sw_attachment_list),
	(sendmsg_window_new): put attachment list in its own pane.
	* src/sendmsg-window.h: add members tree_view and paned, and
	remove member attachments[].

2013-06-17  Peter Bloomfield

	* src/sendmsg-window.c (create_info_pane): allow the recipients
	widget and the attachments list to expand;
	(sendmsg_window_new): use a GtkPaned to allow the user to change
	the space allocated to the headers.

2013-06-10  Peter Bloomfield

	* src/save-restore.c (config_global_load): change default to
	UseSystemFonts=true.
	* src/balsa-app.c (balsa_app_init): ditto.

2013-06-09  Peter Bloomfield

	Add the option to use system fonts

	* src/balsa-app.h: new member gboolean use_system_fonts.
	* src/balsa-app.c (balsa_app_init): initialize it.
	* src/balsa-mime-widget-message.c (add_header_gchar): respect
	it.
	* src/balsa-mime-widget-text.c (balsa_mime_widget_new_text),
	(bm_modify_font_from_string): ditto.
	* src/pref-manager.c (open_preferences_manager), (apply_prefs),
	(attach_font_button), (preview_font_group),
	(use_system_fonts_cb): allow user to choose it.
	* src/save-restore.c (config_global_load), (config_save): save
	and restore it.
	* src/sendmsg-window.c (create_email_or_string_entry),
	(create_text_area): respect it also for compose window.

2013-05-30  Peter Bloomfield

	* src/sendmsg-window.c (balsa_sendmsg_destroy_handler),
	(sw_broker_cb), (create_lang_menu), (sendmsg_window_continue),
	(sw_spell_language_changed_cb), (sw_spell_attach), (set_locale),
	(lang_set_cb): handle language changes fromGtkSpell's
	context menu.
	* src/sendmsg-window.h: spell_check_lang is no longer const.

2013-05-29  Peter Bloomfield

	GNOME Goal: Notification Sources

	* balsa.desktop.in.in: add X-GNOME-UsesNotifications=true
	* libbalsa/information.c (libbalsa_information_varg): set