@@ -1,5 +1,10 @@
 2013-06-21  Peter Bloomfield
 
+	* src/sendmsg-window.c (drag_data_quote), (bsmsg2message),
+	(send_message_handler): check for NULL tree-view.
+
+2013-06-21  Peter Bloomfield
+
 	* src/sendmsg-window.c (remove_attachment), (change_attach_mode),
 	(show_attachment_widget), (add_attachment),
 	(add_urlref_attachment), (create_info_pane), (sw_attachment_list),
